fixed spacing for heading name and count within stored accounts

--- a/client/src/components/styles/StoredAccounts.css
+++ b/client/src/components/styles/StoredAccounts.css
@@ -23,15 +23,17 @@
 .heading-name {
   color: #f8f8f2;
   font-size: 18px;
-  margin-right: 5px;
+  margin: auto;
 }
 
 .header-count {
+  margin: auto;
   border: solid 1px #f8f8f2;
   border-radius: 8px;
   width: 26px;
   color: #f8f8f2;
   font-size: 10px;
+  margin-left: 8px;
 }
 
 hr {
